assignment3/A3-examples/correct-test-programs/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> VOID MAIN LPAREN RPAREN LFBRACK lines RFBRACK
Rule 2     lines -> line SEMICOLON lines
Rule 3     lines -> <empty>
Rule 4     lines -> ifblock lines
Rule 5     lines -> whileblock lines
Rule 6     ifblock -> IF LPAREN CONDITION RPAREN conditionalbody
Rule 7     whileblock -> WHILE LPAREN CONDITION RPAREN conditionalbody
Rule 8     ifblock -> IF LPAREN CONDITION RPAREN conditionalbody ELSE ifelsehandler
Rule 9     ifelsehandler -> conditionalbody
Rule 10    ifelsehandler -> ifblock
Rule 11    conditionalbody -> line SEMICOLON
Rule 12    conditionalbody -> LFBRACK lines RFBRACK
Rule 13    CONDITION -> booleanexpr
Rule 14    booleanexpr -> booleanexpr OR booleanexpr
Rule 15    booleanexpr -> booleanexpr AND booleanexpr
Rule 16    booleanexpr -> LPAREN booleanexpr RPAREN
Rule 17    booleanexpr -> NEGATION booleanexpr
Rule 18    boolfromarith -> arithmeticexpr LTE arithmeticexpr
Rule 19    boolfromarith -> arithmeticexpr GTE arithmeticexpr
Rule 20    boolfromarith -> arithmeticexpr LT arithmeticexpr
Rule 21    boolfromarith -> arithmeticexpr GT arithmeticexpr
Rule 22    boolfromarith -> arithmeticexpr COMPARENOTEQUAL arithmeticexpr
Rule 23    boolfromarith -> arithmeticexpr COMPAREEQUAL arithmeticexpr
Rule 24    booleanexpr -> boolfromarith
Rule 25    line -> INT decllist
Rule 26    line -> assignmentlist
Rule 27    decllist -> pointerdef x
Rule 28    pointerdef -> POINTER NAME
Rule 29    pointerdef -> POINTER pointerdef
Rule 30    x -> COMMA pointerdef x
Rule 31    decllist -> NAME x
Rule 32    x -> COMMA NAME x
Rule 33    x -> <empty>
Rule 34    assignmentlist -> assignment
Rule 35    assignment -> NAME ASSIGN arithmeticexpr
Rule 36    assignment -> startwithstar ASSIGN arithmeticexpr
Rule 37    arithmeticexpr -> arithmeticexpr PLUS arithmeticexpr
Rule 38    arithmeticexpr -> arithmeticexpr MINUS arithmeticexpr
Rule 39    arithmeticexpr -> arithmeticexpr POINTER arithmeticexpr
Rule 40    arithmeticexpr -> arithmeticexpr DIVIDE arithmeticexpr
Rule 41    arithmeticexpr -> MINUS arithmeticexpr
Rule 42    arithmeticexpr -> LPAREN arithmeticexpr RPAREN
Rule 43    arithmeticexpr -> NUMBER
Rule 44    arithmeticexpr -> startwithany
Rule 45    startwithstar -> POINTER startwithany
Rule 46    startwithany -> POINTER startwithany
Rule 47    startwithany -> AMPERSAND startwithany
Rule 48    startwithany -> NAME

Terminals, with rules where they appear

AMPERSAND            : 47
AND                  : 15
ASSIGN               : 35 36
COMMA                : 30 32
COMPAREEQUAL         : 23
COMPARENOTEQUAL      : 22
DIVIDE               : 40
ELSE                 : 8
GT                   : 21
GTE                  : 19
IF                   : 6 8
INT                  : 25
LFBRACK              : 1 12
LPAREN               : 1 6 7 8 16 42
LT                   : 20
LTE                  : 18
MAIN                 : 1
MINUS                : 38 41
NAME                 : 28 31 32 35 48
NEGATION             : 17
NUMBER               : 43
OR                   : 14
PLUS                 : 37
POINTER              : 28 29 39 45 46
RFBRACK              : 1 12
RPAREN               : 1 6 7 8 16 42
SEMICOLON            : 2 11
VOID                 : 1
WHILE                : 7
error                : 

Nonterminals, with rules where they appear

CONDITION            : 6 7 8
arithmeticexpr       : 18 18 19 19 20 20 21 21 22 22 23 23 35 36 37 37 38 38 39 39 40 40 41 42
assignment           : 34
assignmentlist       : 26
booleanexpr          : 13 14 14 15 15 16 17
boolfromarith        : 24
conditionalbody      : 6 7 8 9
decllist             : 25
ifblock              : 4 10
ifelsehandler        : 8
line                 : 2 11
lines                : 1 2 4 5 12
pointerdef           : 27 29 30
startwithany         : 44 45 46 47
startwithstar        : 36
statement            : 0
whileblock           : 5
x                    : 27 30 31 32

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . VOID MAIN LPAREN RPAREN LFBRACK lines RFBRACK

    VOID            shift and go to state 1

    statement                      shift and go to state 2

state 1

    (1) statement -> VOID . MAIN LPAREN RPAREN LFBRACK lines RFBRACK

    MAIN            shift and go to state 3


state 2

    (0) S' -> statement .



state 3

    (1) statement -> VOID MAIN . LPAREN RPAREN LFBRACK lines RFBRACK

    LPAREN          shift and go to state 4


state 4

    (1) statement -> VOID MAIN LPAREN . RPAREN LFBRACK lines RFBRACK

    RPAREN          shift and go to state 5


state 5

    (1) statement -> VOID MAIN LPAREN RPAREN . LFBRACK lines RFBRACK

    LFBRACK         shift and go to state 6


state 6

    (1) statement -> VOID MAIN LPAREN RPAREN LFBRACK . lines RFBRACK
    (2) lines -> . line SEMICOLON lines
    (3) lines -> .
    (4) lines -> . ifblock lines
    (5) lines -> . whileblock lines
    (25) line -> . INT decllist
    (26) line -> . assignmentlist
    (6) ifblock -> . IF LPAREN CONDITION RPAREN conditionalbody
    (8) ifblock -> . IF LPAREN CONDITION RPAREN conditionalbody ELSE ifelsehandler
    (7) whileblock -> . WHILE LPAREN CONDITION RPAREN conditionalbody
    (34) assignmentlist -> . assignment
    (35) assignment -> . NAME ASSIGN arithmeticexpr
    (36) assignment -> . startwithstar ASSIGN arithmeticexpr
    (45) startwithstar -> . POINTER startwithany

    RFBRACK         reduce using rule 3 (lines -> .)
    INT             shift and go to state 11
    IF              shift and go to state 17
    WHILE           shift and go to state 13
    NAME            shift and go to state 7
    POINTER         shift and go to state 16

    assignmentlist                 shift and go to state 14
    lines                          shift and go to state 8
    startwithstar                  shift and go to state 15
    whileblock                     shift and go to state 12
    assignment                     shift and go to state 18
    ifblock                        shift and go to state 9
    line                           shift and go to state 10

state 7

    (35) assignment -> NAME . ASSIGN arithmeticexpr

    ASSIGN          shift and go to state 19


state 8

    (1) statement -> VOID MAIN LPAREN RPAREN LFBRACK lines . RFBRACK

    RFBRACK         shift and go to state 20


state 9

    (4) lines -> ifblock . lines
    (2) lines -> . line SEMICOLON lines
    (3) lines -> .
    (4) lines -> . ifblock lines
    (5) lines -> . whileblock lines
    (25) line -> . INT decllist
    (26) line -> . assignmentlist
    (6) ifblock -> . IF LPAREN CONDITION RPAREN conditionalbody
    (8) ifblock -> . IF LPAREN CONDITION RPAREN conditionalbody ELSE ifelsehandler
    (7) whileblock -> . WHILE LPAREN CONDITION RPAREN conditionalbody
    (34) assignmentlist -> . assignment
    (35) assignment -> . NAME ASSIGN arithmeticexpr
    (36) assignment -> . startwithstar ASSIGN arithmeticexpr
    (45) startwithstar -> . POINTER startwithany

    RFBRACK         reduce using rule 3 (lines -> .)
    INT             shift and go to state 11
    IF              shift and go to state 17
    WHILE           shift and go to state 13
    NAME            shift and go to state 7
    POINTER         shift and go to state 16

    assignmentlist                 shift and go to state 14
    lines                          shift and go to state 21
    startwithstar                  shift and go to state 15
    whileblock                     shift and go to state 12
    assignment                     shift and go to state 18
    ifblock                        shift and go to state 9
    line                           shift and go to state 10

state 10

    (2) lines -> line . SEMICOLON lines

    SEMICOLON       shift and go to state 22


state 11

    (25) line -> INT . decllist
    (27) decllist -> . pointerdef x
    (31) decllist -> . NAME x
    (28) pointerdef -> . POINTER NAME
    (29) pointerdef -> . POINTER pointerdef

    NAME            shift and go to state 24
    POINTER         shift and go to state 26

    decllist                       shift and go to state 25
    pointerdef                     shift and go to state 23

state 12

    (5) lines -> whileblock . lines
    (2) lines -> . line SEMICOLON lines
    (3) lines -> .
    (4) lines -> . ifblock lines
    (5) lines -> . whileblock lines
    (25) line -> . INT decllist
    (26) line -> . assignmentlist
    (6) ifblock -> . IF LPAREN CONDITION RPAREN conditionalbody
    (8) ifblock -> . IF LPAREN CONDITION RPAREN conditionalbody ELSE ifelsehandler
    (7) whileblock -> . WHILE LPAREN CONDITION RPAREN conditionalbody
    (34) assignmentlist -> . assignment
    (35) assignment -> . NAME ASSIGN arithmeticexpr
    (36) assignment -> . startwithstar ASSIGN arithmeticexpr
    (45) startwithstar -> . POINTER startwithany

    RFBRACK         reduce using rule 3 (lines -> .)
    INT             shift and go to state 11
    IF              shift and go to state 17
    WHILE           shift and go to state 13
    NAME            shift and go to state 7
    POINTER         shift and go to state 16

    assignmentlist                 shift and go to state 14
    lines                          shift and go to state 27
    startwithstar                  shift and go to state 15
    whileblock                     shift and go to state 12
    assignment                     shift and go to state 18
    ifblock                        shift and go to state 9
    line                           shift and go to state 10

state 13

    (7) whileblock -> WHILE . LPAREN CONDITION RPAREN conditionalbody

    LPAREN          shift and go to state 28


state 14

    (26) line -> assignmentlist .

    SEMICOLON       reduce using rule 26 (line -> assignmentlist .)


state 15

    (36) assignment -> startwithstar . ASSIGN arithmeticexpr

    ASSIGN          shift and go to state 29


state 16

    (45) startwithstar -> POINTER . startwithany
    (46) startwithany -> . POINTER startwithany
    (47) startwithany -> . AMPERSAND startwithany
    (48) startwithany -> . NAME

    POINTER         shift and go to state 30
    AMPERSAND       shift and go to state 33
    NAME            shift and go to state 32

    startwithany                   shift and go to state 31

state 17

    (6) ifblock -> IF . LPAREN CONDITION RPAREN conditionalbody
    (8) ifblock -> IF . LPAREN CONDITION RPAREN conditionalbody ELSE ifelsehandler

    LPAREN          shift and go to state 34


state 18

    (34) assignmentlist -> assignment .

    SEMICOLON       reduce using rule 34 (assignmentlist -> assignment .)


state 19

    (35) assignment -> NAME ASSIGN . arithmeticexpr
    (37) arithmeticexpr -> . arithmeticexpr PLUS arithmeticexpr
    (38) arithmeticexpr -> . arithmeticexpr MINUS arithmeticexpr
    (39) arithmeticexpr -> . arithmeticexpr POINTER arithmeticexpr
    (40) arithmeticexpr -> . arithmeticexpr DIVIDE arithmeticexpr
    (41) arithmeticexpr -> . MINUS arithmeticexpr
    (42) arithmeticexpr -> . LPAREN arithmeticexpr RPAREN
    (43) arithmeticexpr -> . NUMBER
    (44) arithmeticexpr -> . startwithany
    (46) startwithany -> . POINTER startwithany
    (47) startwithany -> . AMPERSAND startwithany
    (48) startwithany -> . NAME

    MINUS           shift and go to state 35
    LPAREN          shift and go to state 38
    NUMBER          shift and go to state 36
    POINTER         shift and go to state 30
    AMPERSAND       shift and go to state 33
    NAME            shift and go to state 32

    startwithany                   shift and go to state 37
    arithmeticexpr                 shift and go to state 39

state 20

    (1) statement -> VOID MAIN LPAREN RPAREN LFBRACK lines RFBRACK .

    $end            reduce using rule 1 (statement -> VOID MAIN LPAREN RPAREN LFBRACK lines RFBRACK .)


state 21

    (4) lines -> ifblock lines .

    RFBRACK         reduce using rule 4 (lines -> ifblock lines .)


state 22

    (2) lines -> line SEMICOLON . lines
    (2) lines -> . line SEMICOLON lines
    (3) lines -> .
    (4) lines -> . ifblock lines
    (5) lines -> . whileblock lines
    (25) line -> . INT decllist
    (26) line -> . assignmentlist
    (6) ifblock -> . IF LPAREN CONDITION RPAREN conditionalbody
    (8) ifblock -> . IF LPAREN CONDITION RPAREN conditionalbody ELSE ifelsehandler
    (7) whileblock -> . WHILE LPAREN CONDITION RPAREN conditionalbody
    (34) assignmentlist -> . assignment
    (35) assignment -> . NAME ASSIGN arithmeticexpr
    (36) assignment -> . startwithstar ASSIGN arithmeticexpr
    (45) startwithstar -> . POINTER startwithany

    RFBRACK         reduce using rule 3 (lines -> .)
    INT             shift and go to state 11
    IF              shift and go to state 17
    WHILE           shift and go to state 13
    NAME            shift and go to state 7
    POINTER         shift and go to state 16

    assignmentlist                 shift and go to state 14
    lines                          shift and go to state 40
    startwithstar                  shift and go to state 15
    whileblock                     shift and go to state 12
    assignment                     shift and go to state 18
    ifblock                        shift and go to state 9
    line                           shift and go to state 10

state 23

    (27) decllist -> pointerdef . x
    (30) x -> . COMMA pointerdef x
    (32) x -> . COMMA NAME x
    (33) x -> .

    COMMA           shift and go to state 42
    SEMICOLON       reduce using rule 33 (x -> .)

    x                              shift and go to state 41

state 24

    (31) decllist -> NAME . x
    (30) x -> . COMMA pointerdef x
    (32) x -> . COMMA NAME x
    (33) x -> .

    COMMA           shift and go to state 42
    SEMICOLON       reduce using rule 33 (x -> .)

    x                              shift and go to state 43

state 25

    (25) line -> INT decllist .

    SEMICOLON       reduce using rule 25 (line -> INT decllist .)


state 26

    (28) pointerdef -> POINTER . NAME
    (29) pointerdef -> POINTER . pointerdef
    (28) pointerdef -> . POINTER NAME
    (29) pointerdef -> . POINTER pointerdef

    NAME            shift and go to state 45
    POINTER         shift and go to state 26

    pointerdef                     shift and go to state 44

state 27

    (5) lines -> whileblock lines .

    RFBRACK         reduce using rule 5 (lines -> whileblock lines .)


state 28

    (7) whileblock -> WHILE LPAREN . CONDITION RPAREN conditionalbody
    (13) CONDITION -> . booleanexpr
    (14) booleanexpr -> . booleanexpr OR booleanexpr
    (15) booleanexpr -> . booleanexpr AND booleanexpr
    (16) booleanexpr -> . LPAREN booleanexpr RPAREN
    (17) booleanexpr -> . NEGATION booleanexpr
    (24) booleanexpr -> . boolfromarith
    (18) boolfromarith -> . arithmeticexpr LTE arithmeticexpr
    (19) boolfromarith -> . arithmeticexpr GTE arithmeticexpr
    (20) boolfromarith -> . arithmeticexpr LT arithmeticexpr
    (21) boolfromarith -> . arithmeticexpr GT arithmeticexpr
    (22) boolfromarith -> . arithmeticexpr COMPARENOTEQUAL arithmeticexpr
    (23) boolfromarith -> . arithmeticexpr COMPAREEQUAL arithmeticexpr
    (37) arithmeticexpr -> . arithmeticexpr PLUS arithmeticexpr
    (38) arithmeticexpr -> . arithmeticexpr MINUS arithmeticexpr
    (39) arithmeticexpr -> . arithmeticexpr POINTER arithmeticexpr
    (40) arithmeticexpr -> . arithmeticexpr DIVIDE arithmeticexpr
    (41) arithmeticexpr -> . MINUS arithmeticexpr
    (42) arithmeticexpr -> . LPAREN arithmeticexpr RPAREN
    (43) arithmeticexpr -> . NUMBER
    (44) arithmeticexpr -> . startwithany
    (46) startwithany -> . POINTER startwithany
    (47) startwithany -> . AMPERSAND startwithany
    (48) startwithany -> . NAME

    LPAREN          shift and go to state 47
    NEGATION        shift and go to state 49
    MINUS           shift and go to state 35
    NUMBER          shift and go to state 36
    POINTER         shift and go to state 30
    AMPERSAND       shift and go to state 33
    NAME            shift and go to state 32

    boolfromarith                  shift and go to state 50
    arithmeticexpr                 shift and go to state 46
    CONDITION                      shift and go to state 48
    booleanexpr                    shift and go to state 51
    startwithany                   shift and go to state 37

state 29

    (36) assignment -> startwithstar ASSIGN . arithmeticexpr
    (37) arithmeticexpr -> . arithmeticexpr PLUS arithmeticexpr
    (38) arithmeticexpr -> . arithmeticexpr MINUS arithmeticexpr
    (39) arithmeticexpr -> . arithmeticexpr POINTER arithmeticexpr
    (40) arithmeticexpr -> . arithmeticexpr DIVIDE arithmeticexpr
    (41) arithmeticexpr -> . MINUS arithmeticexpr
    (42) arithmeticexpr -> . LPAREN arithmeticexpr RPAREN
    (43) arithmeticexpr -> . NUMBER
    (44) arithmeticexpr -> . startwithany
    (46) startwithany -> . POINTER startwithany
    (47) startwithany -> . AMPERSAND startwithany
    (48) startwithany -> . NAME

    MINUS           shift and go to state 35
    LPAREN          shift and go to state 38
    NUMBER          shift and go to state 36
    POINTER         shift and go to state 30
    AMPERSAND       shift and go to state 33
    NAME            shift and go to state 32

    startwithany                   shift and go to state 37
    arithmeticexpr                 shift and go to state 52

state 30

    (46) startwithany -> POINTER . startwithany
    (46) startwithany -> . POINTER startwithany
    (47) startwithany -> . AMPERSAND startwithany
    (48) startwithany -> . NAME

    POINTER         shift and go to state 30
    AMPERSAND       shift and go to state 33
    NAME            shift and go to state 32

    startwithany                   shift and go to state 53

state 31

    (45) startwithstar -> POINTER startwithany .

    ASSIGN          reduce using rule 45 (startwithstar -> POINTER startwithany .)


state 32

    (48) startwithany -> NAME .

    ASSIGN          reduce using rule 48 (startwithany -> NAME .)
    PLUS            reduce using rule 48 (startwithany -> NAME .)
    MINUS           reduce using rule 48 (startwithany -> NAME .)
    POINTER         reduce using rule 48 (startwithany -> NAME .)
    DIVIDE          reduce using rule 48 (startwithany -> NAME .)
    SEMICOLON       reduce using rule 48 (startwithany -> NAME .)
    LTE             reduce using rule 48 (startwithany -> NAME .)
    GTE             reduce using rule 48 (startwithany -> NAME .)
    LT              reduce using rule 48 (startwithany -> NAME .)
    GT              reduce using rule 48 (startwithany -> NAME .)
    COMPARENOTEQUAL reduce using rule 48 (startwithany -> NAME .)
    COMPAREEQUAL    reduce using rule 48 (startwithany -> NAME .)
    RPAREN          reduce using rule 48 (startwithany -> NAME .)
    OR              reduce using rule 48 (startwithany -> NAME .)
    AND             reduce using rule 48 (startwithany -> NAME .)


state 33

    (47) startwithany -> AMPERSAND . startwithany
    (46) startwithany -> . POINTER startwithany
    (47) startwithany -> . AMPERSAND startwithany
    (48) startwithany -> . NAME

    POINTER         shift and go to state 30
    AMPERSAND       shift and go to state 33
    NAME            shift and go to state 32

    startwithany                   shift and go to state 54

state 34

    (6) ifblock -> IF LPAREN . CONDITION RPAREN conditionalbody
    (8) ifblock -> IF LPAREN . CONDITION RPAREN conditionalbody ELSE ifelsehandler
    (13) CONDITION -> . booleanexpr
    (14) booleanexpr -> . booleanexpr OR booleanexpr
    (15) booleanexpr -> . booleanexpr AND booleanexpr
    (16) booleanexpr -> . LPAREN booleanexpr RPAREN
    (17) booleanexpr -> . NEGATION booleanexpr
    (24) booleanexpr -> . boolfromarith
    (18) boolfromarith -> . arithmeticexpr LTE arithmeticexpr
    (19) boolfromarith -> . arithmeticexpr GTE arithmeticexpr
    (20) boolfromarith -> . arithmeticexpr LT arithmeticexpr
    (21) boolfromarith -> . arithmeticexpr GT arithmeticexpr
    (22) boolfromarith -> . arithmeticexpr COMPARENOTEQUAL arithmeticexpr
    (23) boolfromarith -> . arithmeticexpr COMPAREEQUAL arithmeticexpr
    (37) arithmeticexpr -> . arithmeticexpr PLUS arithmeticexpr
    (38) arithmeticexpr -> . arithmeticexpr MINUS arithmeticexpr
    (39) arithmeticexpr -> . arithmeticexpr POINTER arithmeticexpr
    (40) arithmeticexpr -> . arithmeticexpr DIVIDE arithmeticexpr
    (41) arithmeticexpr -> . MINUS arithmeticexpr
    (42) arithmeticexpr -> . LPAREN arithmeticexpr RPAREN
    (43) arithmeticexpr -> . NUMBER
    (44) arithmeticexpr -> . startwithany
    (46) startwithany -> . POINTER startwithany
    (47) startwithany -> . AMPERSAND startwithany
    (48) startwithany -> . NAME
